--- a/pages/16772.html
+++ b/pages/16772.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9094/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9094/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -479,6 +479,10 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<ul>
+<li><a href='#dihedral_groups'>Dihedral groups</a></li>
+<li><a href='#binary_dihedraldicyclic_groups'>Binary dihedral/dicyclic groups</a></li>
+</ul>
 <li><a href='#properties'>Properties</a></li>
 <ul>
 <li><a href='#group_cohomology'>Group cohomology</a></li>
@@ -495,6 +499,8 @@ margin-left: 0em;
 </div>
 
 <h2 id="idea">Idea</h2>
+
+<h3 id="dihedral_groups">Dihedral groups</h3>
 
 <p>The dihedral group, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>D</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">D_{2n}</annotation></semantics></math>, is a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">2n</annotation></semantics></math>. It may be defined as the <a class="existingWikiWord" href="/nlab/show/symmetry+group">symmetry group</a> of a regular <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-gon.</p>
 
@@ -526,6 +532,13 @@ margin-left: 0em;
 </ol>
 </div>
 
+<h3 id="binary_dihedraldicyclic_groups">Binary dihedral/dicyclic groups</h3>
+
+<p>Under the further lift through the <a class="existingWikiWord" href="/nlab/show/spin+group">spin group</a>-<a class="existingWikiWord" href="/nlab/show/double+cover">double cover</a> map <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo><mo>≃</mo><mi>Spin</mi><mo stretchy="false">(</mo><mn>3</mn><mo stretchy="false">)</mo><mo>→</mo><mi>SO</mi><mo stretchy="false">(</mo><mn>3</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(2) \simeq Spin(3) \to SO(3)</annotation></semantics></math>, the dihedral group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>D</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">D_{2n}</annotation></semantics></math> is covered by the <em>binary dihedral group</em>, also known as the <em>dicyclic group</em> and denoted</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msub><mo>=</mo><msub><mi>Dic</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">
+  2 D_{2n} = Dic_n
+
+</annotation></semantics></math></div>
 <h2 id="properties">Properties</h2>
 
 <h3 id="group_cohomology">Group cohomology</h3>
@@ -555,8 +568,8 @@ margin-left: 0em;
 <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Dynkin_diagram_D4.png" width="100" />
 </div>
 <p>The first binary dihedral group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">2 D_4</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a> to the <a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> of order 8:</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub><mo>≃</mo><msub><mi>Q</mi> <mn>8</mn></msub><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
-  2 D_4 \simeq Q_8
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub><mo stretchy="false">(</mo><mo>=</mo><msub><mi>Dic</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>Q</mi> <mn>8</mn></msub><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  2 D_4 (= Dic_2) \simeq Q_8
   \,.
 
 </annotation></semantics></math></div>
@@ -607,6 +620,18 @@ margin-left: 0em;
 <p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Dicyclic_group#Binary_dihedral_group">Binary dihedral group</a></em></p>
 </li>
 
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Dicyclic_group">Dicyclic group</a></em></p>
+</li>
+
+<li>
+<p>Groupprops, <em><a href="https://groupprops.subwiki.org/wiki/Dicyclic_group">Dicyclic group</a></em></p>
+</li>
+
+<li>
+<p>Groupprops, <em><a href="https://groupprops.subwiki.org/wiki/Linear_representation_theory_of_dicyclic_groups">Linear representation theory of dicyclic groups</a></em></p>
+</li>
+
 <li id="Groupprops">
 <p>Groupprops, <em><a href="http://groupprops.subwiki.org/wiki/Group_cohomology_of_dihedral_group:D8">Group cohomology of dihedral group:D8</a></em></p>
 </li>
@@ -617,14 +642,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 14:46:08.
+  Last revised on October  4, 2018 at 08:25:30.
   See the <a href="https://ncatlab.org/nlab/history/dihedral group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dihedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dihedral+group/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/dihedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dihedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/dihedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dihedral+group/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/dihedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dihedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/dihedral group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
