--- a/pages/17262.html
+++ b/pages/17262.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -515,7 +515,7 @@ margin-left: 0em;
 <p>graphics grabbed from Wikipedia <a href="https://upload.wikimedia.org/wikipedia/commons/5/59/Dynkin_diagram_D4.png">here</a></p>
 </blockquote>
 
-<p>This order-8 quaternion group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is the first in a row of <span class="newWikiWord">generalized quaternion groups<a href="/nlab/new/generalized+quaternion+groups">?</a></span>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><mn>4</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{4n}</annotation></semantics></math>, which are also examples of <span class="newWikiWord">dicyclic groups<a href="/nlab/new/dicyclic+groups">?</a></span> which class forms part of an even larger family.</p>
+<p>This order-8 quaternion group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is the first in a row of <span class="newWikiWord">generalized quaternion groups<a href="/nlab/new/generalized+quaternion+groups">?</a></span>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><mn>4</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{4n}</annotation></semantics></math>, which are also examples of <a class="existingWikiWord" href="/nlab/show/dicyclic+groups">dicyclic groups</a> which class forms part of an even larger family.</p>
 
 <h2 id="definition">Definition</h2>
 
@@ -639,13 +639,17 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Quaternion_group">Quaternion group</a></em></li>
-</ul>
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Quaternion_group">Quaternion group</a></em></p>
+</li>
 
-<p>and</p>
+<li>
+<p>Groupprops, <em><a href="https://groupprops.subwiki.org/wiki/Linear_representation_theory_of_quaternion_group">Linear representation theory of the quaternion group</a></em></p>
+</li>
 
-<ul>
-<li><a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/quaternion.html">GroupNames</a>.</li>
+<li>
+<p>GroupNames, <em><a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/quaternion.html">Quaternion groups <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><msup><mn>2</mn> <mi>n</mi></msup></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{2^n}</annotation></semantics></math></a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -653,14 +657,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 04:08:14.
+  Last revised on October  4, 2018 at 08:31:58.
   See the <a href="https://ncatlab.org/nlab/history/quaternion group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quaternion group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
