--- a/pages/3485.html
+++ b/pages/3485.html
@@ -958,7 +958,7 @@ margin-left: 0em;
 
 <ul>
 <li id="Montaldi">
-<p>James Montaldi, <em><a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/Representations">Real representations of finite groups</a></em></p>
+<p><a class="existingWikiWord" href="/nlab/show/James+Montaldi">James Montaldi</a>, <em><a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/Representations">Real representations of finite groups</a></em></p>
 </li>
 
 <li id="PlanetMathRepAndBurn">
@@ -971,14 +971,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 13:51:35.
+  Last revised on October  4, 2018 at 10:25:06.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
