--- a/pages/19752.html
+++ b/pages/19752.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9108/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9108/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -327,6 +327,10 @@ margin-left: 0em;
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">\rho_8</annotation></semantics></math></td><td style="text-align: left;">4</td><td style="text-align: left;">-4</td><td style="text-align: left;">0</td><td style="text-align: left;">-1</td><td style="text-align: left;">1</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td></tr>
 </tbody></table>
 <p><strong><a class="existingWikiWord" href="/nlab/show/character+table">character table</a> over the <a class="existingWikiWord" href="/nlab/show/real+numbers">real numbers</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding="application/x-tex">\mathbb{R}</annotation></semantics></math></strong></p>
+
+<blockquote>
+<p>check, something strange here…</p>
+</blockquote>
 <table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/irrep">irrep</a></th><th>1</th><th>-1</th><th><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>i</mi></mrow><annotation encoding="application/x-tex">i</annotation></semantics></math></th><th>a</th><th>c</th><th>e</th><th>f</th><th>g</th></tr></thead><tbody><tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\rho_1</annotation></semantics></math></td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">\rho_2</annotation></semantics></math></td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">-1</td><td style="text-align: left;">-1</td><td style="text-align: left;">-1</td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">\rho_3</annotation></semantics></math></td><td style="text-align: left;">2</td><td style="text-align: left;">2</td><td style="text-align: left;">2</td><td style="text-align: left;">-1</td><td style="text-align: left;">-1</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td></tr>
@@ -339,7 +343,13 @@ margin-left: 0em;
 <p><strong>References</strong></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/James+Montaldi">James Montaldi</a>, <em><a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/BinaryCubic#BinOct">Real representations – Binary cubic – 2O</a></em></li>
+<li>
+<p>GroupProps, <em><a href="https://groupprops.subwiki.org/wiki/Linear_representation_theory_of_binary_octahedral_group">Linear representation theory of binary octahedral group</a></em></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/James+Montaldi">James Montaldi</a>, <em><a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/BinaryCubic#BinOct">Real representations – Binary cubic – 2O</a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -347,7 +357,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October  4, 2018 at 10:59:20.
+  Created on October  4, 2018 at 11:31:38.
   See the <a href="https://ncatlab.org/nlab/history/character table of 2O" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
