--- a/pages/19753.html
+++ b/pages/19753.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Cosma Shalizi in nLab
+      Matthew Weaver in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Cosma Shalizi
+      Matthew Weaver
   </h1>
 
 
@@ -294,7 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9110/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://ncatlab.org/nlab/author/Matthew%20Weaver" title="Overview of nLab pages which Matthew Weaver has edited" style="color: black">Pages contributed to</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,49 +312,31 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<p><strong>Cosma Rohilla Shalizi</strong> holds Ph.D. in physics from University of Wisconsin and is now an associate professor in Statistics Department of Carnegie Mellon University and external professor at Santa Fe Institute.</p>
-
 <ul>
-<li>
-<p>related entries: <a class="existingWikiWord" href="/nlab/show/information+geometry">information geometry</a></p>
-</li>
-
-<li>
-<p>University of Michigan <a href="http://www.cscs.umich.edu/~crshalizi">website</a>, and <a href="http://www.stat.cmu.edu/~cshalizi">CMU website</a> (at times it does not work)</p>
-</li>
-
-<li>
-<p><a href="http://www.cscs.umich.edu/~crshalizi/research">research page</a></p>
-</li>
+<li><a href="http://www.cs.princeton.edu/~mzweaver/">webpage</a></li>
 </ul>
-
-<p>From <a href="http://www.ml.cmu.edu/mlpeople/relatedfaculty.html">related faculty</a> at CMU Machine Learning:</p>
-
-<blockquote>
-<p>Dr. Shalizi has research interests in Nonparametric model discovery of state-space hidden Markov models and stochastic automata; dynamical-systems analysis of learning processes; applications of information theory, large deviations and ergodic theory in statistical inference; complex network models; heavy-tailed distributions.</p>
-</blockquote>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 12:58:44.
-  See the <a href="https://ncatlab.org/nlab/history/Cosma Shalizi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October  4, 2018 at 12:24:00.
+  See the <a href="https://ncatlab.org/nlab/history/Matthew Weaver" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Cosma+Shalizi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cosma+Shalizi/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Cosma+Shalizi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cosma+Shalizi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Cosma Shalizi/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Matthew+Weaver" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Matthew Weaver/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Cosma+Shalizi" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Matthew+Weaver" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Cosma+Shalizi" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Matthew+Weaver" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Cosma+Shalizi" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Matthew+Weaver" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
