--- a/pages/17262.html
+++ b/pages/17262.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9081/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9081/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -562,7 +562,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub><mo>⊂</mo><mn>2</mn><mi>O</mi></mrow><annotation encoding="application/x-tex">Q_8 \subset 2 O</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/binary+octahedral+group">binary octahedral group</a> (not <a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal</a>)</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub><mo>⊂</mo><mn>2</mn><mi>O</mi></mrow><annotation encoding="application/x-tex">Q_8 \subset 2 O</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/binary+octahedral+group">binary octahedral group</a> (<a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal</a>)</p>
 </li>
 
 <li>
@@ -688,14 +688,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 11:21:09.
+  Last revised on October  4, 2018 at 12:04:06.
   See the <a href="https://ncatlab.org/nlab/history/quaternion group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quaternion group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
