--- a/pages/19719.html
+++ b/pages/19719.html
@@ -399,7 +399,9 @@ margin-left: 0em;
 
 <li><span class="newWikiWord">Andrew Swan<a href="/nlab/new/Andrew+Swan">?</a></span></li>
 
-<li><span class="newWikiWord">Stephan Spahn<a href="/nlab/new/Stephan+Spahn">?</a></span>
+<li><span class="newWikiWord">Stephan Spahn<a href="/nlab/new/Stephan+Spahn">?</a></span></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Matthew+Weaver">Matthew Weaver</a>
 <p><em> <span class="newWikiWord">Jonathan Weinberger<a href="/nlab/new/Jonathan+Weinberger">?</a></span></em></p>
 </li>
 </ul>
@@ -413,14 +415,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  3, 2018 at 11:17:45.
+  Last revised on October  4, 2018 at 12:21:20.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
