--- a/pages/19750.html
+++ b/pages/19750.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9106/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9106/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -339,7 +339,13 @@ margin-left: 0em;
 <p><strong>References</strong></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/James+Montaldi">James Montaldi</a>, <em><a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/BinaryCubic#BinTet">Real representations – Binary cubic – 2T</a></em></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/James+Montaldi">James Montaldi</a>, <em><a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/BinaryCubic#BinTet">Real representations – Binary cubic – 2T</a></em></p>
+</li>
+
+<li>
+<p>Bockland, <em>Character tables and McKay quivers</em> (<a href="https://staff.fnwi.uva.nl/r.r.j.bocklandt/notes/kleinian.pdf">pdf</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -347,14 +353,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 10:47:06.
+  Last revised on October  4, 2018 at 13:59:06.
   See the <a href="https://ncatlab.org/nlab/history/character table of 2T" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character+table+of+2T" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2T/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2T" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2T" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/character+table+of+2T" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2T/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2T" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2T" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character table of 2T/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
