--- a/pages/19719.html
+++ b/pages/19719.html
@@ -404,6 +404,8 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Matthew+Weaver">Matthew Weaver</a>
 <p><em> <span class="newWikiWord">Jonathan Weinberger<a href="/nlab/new/Jonathan+Weinberger">?</a></span></em></p>
 </li>
+
+<li><span class="newWikiWord">tslil clingman<a href="/nlab/new/tslil+clingman">?</a></span></li>
 </ul>
 
 <h2 id="plans">Plans</h2>
@@ -415,14 +417,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 12:21:20.
+  Last revised on October  4, 2018 at 16:09:45.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
