--- a/pages/19712.html
+++ b/pages/19712.html
@@ -632,7 +632,7 @@ margin-left: 0em;
 <p>Integer row reduction for integer matrices via <a class="existingWikiWord" href="/nlab/show/greatest+common+divisors">greatest common divisors</a> is explained for instance in</p>
 
 <ul>
-<li id="GilbertPathria90">William Gilbert, Anu Pathria, <em>Linear Diophantine Equations</em>, 1990 (<a href="https://www.math.uwaterloo.ca/~wgilbert/Research/GilbertPathria.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/GilbertPathria90.pdf" title="pdf">pdf</a>)</li>
+<li id="GilbertPathria90">William Gilbert, Anu Pathria, <em>Linear Diophantine Equations</em>, Dept. Pure Math. Univ. Waterloo, Ontario, Canada, 1990 (<a href="https://www.math.uwaterloo.ca/~wgilbert/Research/GilbertPathria.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/GilbertPathria90.pdf" title="pdf">pdf</a>)</li>
 </ul>
 
 <p>Discussion of the general theory of integer matrices includes</p>
@@ -658,14 +658,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 09:27:31.
+  Last revised on October  4, 2018 at 23:23:58.
   See the <a href="https://ncatlab.org/nlab/history/Hermite normal form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hermite+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hermite+normal+form/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Hermite+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hermite+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Hermite+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hermite+normal+form/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Hermite+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hermite+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Hermite normal form/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
