--- a/pages/3381.html
+++ b/pages/3381.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8886/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8886/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -703,7 +703,7 @@ margin-left: 0em;
 
 <h3 id="WhiteheadTowerAndSupersymmetry">Whitehead tower and relation to supersymmetry</h3>
 
-<p>The <a class="existingWikiWord" href="/nlab/show/symmetric+groups">symmetric groups</a> and <a class="existingWikiWord" href="/nlab/show/alternating+groups">alternating groups</a> are the first stages in a restriction of the <a class="existingWikiWord" href="/nlab/show/Whitehead+tower">Whitehead tower</a> of the <a class="existingWikiWord" href="/nlab/show/orthogonal+group">orthogonal group</a> to “finite <a class="existingWikiWord" href="/nlab/show/discrete+%E2%88%9E-groups">discrete ∞-groups</a>” in the sense of <a class="existingWikiWord" href="/nlab/show/homotopy+type+with+finite+homotopy+groups">homotopy type with finite homotopy groups</a>. The <a class="existingWikiWord" href="/nlab/show/homotopy+fibers">homotopy fibers</a> of the stages of the “finite Whitehead tower” are the <a class="existingWikiWord" href="/nlab/show/stable+homotopy+groups+of+spheres">stable homotopy groups of spheres</a> (<a href="#EpaGanter16">Epa-Ganter 16</a>). (See also at <em><a href="super+algebra#AbstractIdea">super algebra – Abstract idea</a></em> and at <em><a class="existingWikiWord" href="/nlab/show/Platonic+2-group">Platonic 2-group</a></em>.)</p>
+<p>The <span class="newWikiWord">symmetric groups<a href="/nlab/new/symmetric+groups">?</a></span> and <a class="existingWikiWord" href="/nlab/show/alternating+groups">alternating groups</a> are the first stages in a restriction of the <a class="existingWikiWord" href="/nlab/show/Whitehead+tower">Whitehead tower</a> of the <a class="existingWikiWord" href="/nlab/show/orthogonal+group">orthogonal group</a> to “finite <a class="existingWikiWord" href="/nlab/show/discrete+%E2%88%9E-groups">discrete ∞-groups</a>” in the sense of <a class="existingWikiWord" href="/nlab/show/homotopy+type+with+finite+homotopy+groups">homotopy type with finite homotopy groups</a>. The <a class="existingWikiWord" href="/nlab/show/homotopy+fibers">homotopy fibers</a> of the stages of the “finite Whitehead tower” are the <a class="existingWikiWord" href="/nlab/show/stable+homotopy+groups+of+spheres">stable homotopy groups of spheres</a> (<a href="#EpaGanter16">Epa-Ganter 16</a>). (See also at <em><a href="super+algebra#AbstractIdea">super algebra – Abstract idea</a></em> and at <em><a class="existingWikiWord" href="/nlab/show/Platonic+2-group">Platonic 2-group</a></em>.)</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mi>⋮</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>Fivebrane</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd><msup><mstyle mathvariant="bold"><mi>B</mi></mstyle> <mn>2</mn></msup><msub><mi>π</mi> <mn>3</mn></msub><mi>𝕊</mi></mtd> <mtd><mover><mo>⟶</mo><mrow></mrow></mover></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><msub><mi>𝒜</mi> <mi>n</mi></msub></mtd> <mtd><mo>↪</mo></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>String</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><msub><mi>π</mi> <mn>2</mn></msub><mi>𝕊</mi></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><msub><mover><mi>A</mi><mo stretchy="false">˜</mo></mover> <mi>n</mi></msub></mtd> <mtd><mo>↪</mo></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>Spin</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd><msub><mi>π</mi> <mn>1</mn></msub><mi>𝕊</mi></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><msub><mi>A</mi> <mi>n</mi></msub></mtd> <mtd><mo>↪</mo></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>SO</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd> <mtd></mtd> <mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><msub><mi>S</mi> <mi>n</mi></msub></mtd> <mtd><mo>↪</mo></mtd> <mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>O</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
   \array{   
     &amp;&amp; &amp;&amp; \vdots
@@ -813,14 +813,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 10:36:57.
+  Last revised on October  5, 2018 at 02:04:56.
   See the <a href="https://ncatlab.org/nlab/history/permutation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/permutation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/permutation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
