--- a/pages/19752.html
+++ b/pages/19752.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -314,6 +314,8 @@ margin-left: 0em;
 <p><strong><a class="existingWikiWord" href="/nlab/show/linear+representation+theory">linear representation theory</a> of <a class="existingWikiWord" href="/nlab/show/binary+octahedral+group">binary octahedral group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>O</mi></mrow><annotation encoding="application/x-tex">2 O</annotation></semantics></math></strong></p>
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/group+order">group order</a>: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo stretchy="false">|</mo><mn>2</mn><mi>O</mi><mo stretchy="false">|</mo></mrow><mo>=</mo><mn>48</mn></mrow><annotation encoding="application/x-tex">{\vert 2O\vert} = 48</annotation></semantics></math></p>
 <table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a>:</th><th>1</th><th>-1</th><th><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>i</mi></mrow><annotation encoding="application/x-tex">i</annotation></semantics></math></th><th>a</th><th>c</th><th>e</th><th>f</th><th>g</th></tr></thead><tbody><tr><td style="text-align: left;">their <a class="existingWikiWord" href="/nlab/show/cardinality">cardinality</a>:</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">6</td><td style="text-align: left;">8</td><td style="text-align: left;">8</td><td style="text-align: left;">6</td><td style="text-align: left;">6</td><td style="text-align: left;">12</td></tr>
 </tbody></table>
 <p><strong><a class="existingWikiWord" href="/nlab/show/character+table">character table</a> over the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">\mathbb{C}</annotation></semantics></math></strong></p>
@@ -361,14 +363,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 13:58:40.
+  Last revised on October  5, 2018 at 02:38:39.
   See the <a href="https://ncatlab.org/nlab/history/character table of 2O" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character+table+of+2O" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2O/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/character+table+of+2O" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2O" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/character+table+of+2O" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2O/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2O" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2O" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character table of 2O/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
