--- a/pages/7836.html
+++ b/pages/7836.html
@@ -311,6 +311,10 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<blockquote>
+<p>This entry is about the concept in <a class="existingWikiWord" href="/nlab/show/group+theory">group theory</a>. See at <em><a class="existingWikiWord" href="/nlab/show/order">order</a></em> for the concept in <a class="existingWikiWord" href="/nlab/show/order+theory">order theory</a>.</p>
+</blockquote>
+<hr />
 <div class="rightHandSide">
 <div class="toc clickDown" tabindex="0">
 <h3 id="context">Context</h3>
@@ -582,14 +586,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 04:52:01.
+  Last revised on October  5, 2018 at 02:37:05.
   See the <a href="https://ncatlab.org/nlab/history/order of a group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/order+of+a+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/order+of+a+group/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/order+of+a+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/order+of+a+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/order+of+a+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/order+of+a+group/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/order+of+a+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/order+of+a+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/order of a group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
